# particle_research

./: CMakeLists.txt  Particle.cpp  Particle.h  main.cpp
